<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL3403_Data" Id="{1c3b4123-789d-4484-ae19-6c1f3dd04a01}">
    <Declaration><![CDATA[TYPE ST_EL3403_Data :
STRUCT
	current			:	REAL; 	// 0.000001 A
	voltage			:	REAL; 	// 0.0001 V
	activePower		:	REAL;	// 0.01 W
	apparentPower	:	REAL;	// 0.01 VA
	reactivePower	:	REAL;	// 0.01 VAR
	positiveEnergy	:	REAL;	// 0.001 Wh
	cosPhi			:	REAL;	// 0.001
	frequency		:	REAL;	// 0.1 Hz
	negativeEnergy	:	REAL;	// 0.001 Wh
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>